<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="patabase.chargereminder.MainActivity"
    tools:showIn="@layout/activity_main"
    android:stretchColumns="2">

    <TableRow>

        <TextView
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_start_time_label"
            android:paddingRight="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_start_time_current"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/current_start_time_textview" />

        <Button
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SET"
            android:id="@+id/set_start_time_button" />


    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_stop_time_label"
            android:paddingRight="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_stop_time_current"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/current_stop_time_textview" />

        <Button
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SET"
            android:id="@+id/set_stop_time_button"/>

    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_check_interval_label"
            android:paddingRight="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_check_interval_current"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/current_check_interval_textview"/>

        <Button
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SET"
            android:id="@+id/set_check_interval_button"/>

    </TableRow>

</TableLayout>
